--- a/src/styles/top.css
+++ b/src/styles/top.css
@@ -11,3 +11,12 @@
     font-size: 20px;
   }
  
+  @media (max-width: 799px) {
+    .top {
+      font-size: 16px;
+      padding: 20px;
+    }
+  }
+  .top p {
+    font-size: 10px;
+  }
